--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".activities.RegistroPaso2Activity" />
         <activity android:name=".activities.RegistroPaso3Activity" />
         <activity
-            android:name=".activities.RegistroVentaActivity"
+            android:name=".activities.InicioActivity"
             android:label="@string/title_activity_registro_venta"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
