--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ec.gob.arch.glpmobil">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".sesion.ObjetoAplicacion"
         android:allowBackup="true"
@@ -11,7 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.RegistroVentaActivity"></activity>
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.RegistroVentaActivity" />
         <activity android:name=".activities.RegistroActivity" />
         <activity android:name=".activities.RegistroPaso2Activity" />
         <activity android:name=".activities.RegistroPaso3Activity" />
@@ -26,10 +30,7 @@
             android:name=".activities.InicioActivity"
             android:label="@string/title_activity_usuario_sesion"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.EscanearActivity" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
