--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,31 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('D:\\app\\keystore.jks')
+            storePassword 'changeit'
+            keyAlias = 'archapp'
+            keyPassword 'arch2020'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "ec.gob.arch.glpmobil"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
+        versionCode 6
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testFunctionalTest = true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            versionNameSuffix = '6'
         }
     }
 }
@@ -27,9 +39,9 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
-
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
