--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('D:\\app\\keystore.jks')
-            storePassword 'changeit'
-            keyAlias = 'archapp'
-            keyPassword 'arch2020'
-        }
-    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "ec.gob.arch.glpmobil"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 6
+        versionCode 8
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testFunctionalTest = true
@@ -22,10 +14,9 @@ android {
     buildTypes {
         release {
             //minifyEnabled false
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+           // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            versionNameSuffix = '6'
         }
     }
 }
@@ -33,9 +24,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible,GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
